Add JVM EDN ABI smoke wrappers